Remove buildSrc & replace with toml

--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -17,6 +17,8 @@ exceptions:
 
 formatting:
   android: true
+  Indentation:
+    active: false
   ImportOrdering:
     active: true
   FinalNewline:
