--- a/.editorconfig
+++ b/.editorconfig
@@ -1,19 +1,19 @@
-root=true
+root = true
 
 [*]
-charset=utf-8
-end_of_line=lf
-insert_final_newline=false
+charset = utf-8
+end_of_line = lf
+insert_final_newline = false
 
-max_line_length=120
+max_line_length = 120
 
-indent_size=2
-indent_style=space
+indent_size = 4
+indent_style = space
 
 [*.{kt,kts}]
-ij_kotlin_name_count_to_use_star_import=2147483647
-ij_kotlin_name_count_to_use_star_import_for_members=2147483647
-ij_kotlin_imports_layout=*,java.**,javax.**,kotlin.**,^
+ij_kotlin_name_count_to_use_star_import = 2147483647
+ij_kotlin_name_count_to_use_star_import_for_members = 2147483647
+ij_kotlin_imports_layout = *, java.**, javax.**, kotlin.**, ^
 
 [*.xml]
 ij_continuation_indent_size = 4
