chore: add base branch & schedule to renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -2,5 +2,11 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
     "config:base"
+  ],
+  "baseBranches": [
+    "develop"
+  ],
+  "schedule": [
+    "before 5am every monday"
   ]
 }
