--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,11 +2,15 @@
 detekt = "1.22.0"
 gradlePublish = "1.1.0"
 gradleVersions = "0.45.0"
+junit = "5.8.1"
 kotlin = "1.8.10"
 
 [libraries]
-hierynomusssh = { module = "com.hierynomus:sshj", version = "0.35.0" }
 detekt-formatting = { module = "io.gitlab.arturbosch.detekt:detekt-formatting", version.ref = "detekt" }
+hierynomusssh = { module = "com.hierynomus:sshj", version = "0.35.0" }
+junit-api = { module = "org.junit.jupiter:junit-jupiter-api", version.ref = "junit" }
+junit-engine = { module = "org.junit.jupiter:junit-jupiter-engine", version.ref = "junit" }
+assertk = "com.willowtreeapps.assertk:assertk-jvm:0.25"
 
 [plugins]
 gradle-publish = { id = "com.gradle.plugin-publish", version.ref = "gradlePublish" }
