chore: Fix detekt setup

--- a/detekt-config.yml
+++ b/detekt-config.yml
@@ -2,7 +2,7 @@ build:
     maxIssues: 5
 
 complexity:
-    ComplexMethod:
+    CyclomaticComplexMethod:
         ignoreSingleWhenExpression: true
 
 empty-blocks:
