chore: Add gradle dependency submission

--- a/.github/workflows/check-and-build.yml
+++ b/.github/workflows/check-and-build.yml
@@ -9,6 +9,14 @@ on:
             - main
 
 jobs:
+    dependency-submission:
+        runs-on: ubuntu-latest
+        steps:
+            -   name: Checkout sources
+                uses: actions/checkout@v4
+            -   name: Generate and submit dependency graph
+                uses: gradle/actions/dependency-submission@v3
+
     detekt:
         name: Run detekt
         runs-on: ubuntu-latest
